<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".PengertianActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@color/pink3"
        android:elevation="2dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="50dp"
            android:gravity="left"
            android:text="Pengertian Menstruasi"
            android:fontFamily="sans-serif"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:textSize="17dp"
                android:textStyle="normal"
                android:fontFamily="sans-serif"
                android:text="@string/pengertian" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:textSize="17dp"
                android:textStyle="normal"
                android:fontFamily="sans-serif"
                android:text="@string/pengertianlanjutan" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:textSize="17dp"
                android:textStyle="normal"
                android:fontFamily="sans-serif"
                android:text="@string/pengertian1" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:textSize="15dp"
                android:textStyle="italic"
                android:fontFamily="sans-serif"
                android:text="@string/pengertian2" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:textSize="18dp"
                android:textStyle="normal"
                android:fontFamily="sans-serif"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:textSize="17dp"
                android:textStyle="bold"
                android:fontFamily="sans-serif"
                android:text="@string/namaorgan" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:textSize="17dp"
                android:textStyle="normal"
                android:fontFamily="sans-serif"
                android:text="@string/namaorgan1" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:textSize="17dp"
                android:textStyle="normal"
                android:fontFamily="sans-serif"
                android:text="@string/namaorgan2" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:textSize="17dp"
                android:textStyle="normal"
                android:fontFamily="sans-serif"
                android:text="@string/namaorgan3" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:textSize="17dp"
                android:textStyle="normal"
                android:fontFamily="sans-serif"
                android:text="@string/namaorgan4" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:textSize="17dp"
                android:textStyle="normal"
                android:fontFamily="sans-serif"
                android:text="@string/namaorgan5" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:textSize="17dp"
                android:textStyle="normal"
                android:fontFamily="sans-serif"
                android:text="@string/namaorgan6" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:textSize="17dp"
                android:textStyle="normal"
                android:fontFamily="sans-serif"
                android:text="@string/namaorgan7" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:textSize="15dp"
                android:textStyle="italic"
                android:fontFamily="sans-serif"
                android:text="@string/namaorgan8" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:textSize="15dp"
                android:textStyle="italic"
                android:fontFamily="sans-serif"/>


        </LinearLayout>

    </ScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>