<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".GangguanActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@color/pink3"
        android:elevation="2dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="50dp"
            android:gravity="left"
            android:text="Gangguan Menstruasi"
            android:fontFamily="sans-serif"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:textSize="17dp"
                android:textStyle="normal"
                android:fontFamily="sans-serif"
                android:text="@string/gangguan" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:textSize="17dp"
                android:textStyle="normal"
                android:fontFamily="sans-serif"
                android:text="@string/gangguan1" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="15dp"
                android:fontFamily="sans-serif"
                android:text="@string/gangguan2lanjutan"
                android:textSize="17dp"
                android:textStyle="normal" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="15dp"
                android:fontFamily="sans-serif"
                android:text="@string/gangguan2"
                android:textSize="17dp"
                android:textStyle="normal" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="15dp"
                android:fontFamily="sans-serif"
                android:text="@string/gangguan3"
                android:textSize="17dp"
                android:textStyle="normal" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="15dp"
                android:fontFamily="sans-serif"
                android:text="@string/gangguan3.1"
                android:textSize="17dp"
                android:textStyle="normal" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="15dp"
                android:fontFamily="sans-serif"
                android:text="@string/gangguan3.2"
                android:textSize="17dp"
                android:textStyle="normal" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="15dp"
                android:fontFamily="sans-serif"
                android:text="@string/gangguan4"
                android:textSize="17dp"
                android:textStyle="normal" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="15dp"
                android:fontFamily="sans-serif"
                android:text="@string/gangguan5"
                android:textSize="15dp"
                android:textStyle="italic" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="15dp"
                android:fontFamily="sans-serif"
                android:textSize="17dp"
                android:textStyle="normal" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="15dp"
                android:fontFamily="sans-serif"
                android:text="@string/gangguan6"
                android:textSize="17dp"
                android:textStyle="bold" />
            <ImageView
                android:layout_width="330dp"
                android:layout_height="400dp"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_gravity="center"
                android:src="@drawable/menstrupedia"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="15dp"
                android:fontFamily="sans-serif"
                android:text="@string/gangguan7"
                android:textSize="17dp"
                android:textStyle="normal" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="15dp"
                android:fontFamily="sans-serif"
                android:text="@string/gangguan8"
                android:textSize="17dp"
                android:textStyle="normal" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="15dp"
                android:fontFamily="sans-serif"
                android:text="@string/gangguan9"
                android:textSize="17dp"
                android:textStyle="normal" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="15dp"
                android:fontFamily="sans-serif"
                android:text="@string/gangguan10"
                android:textSize="17dp"
                android:textStyle="normal" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="15dp"
                android:fontFamily="sans-serif"
                android:text="@string/gangguan11"
                android:textSize="17dp"
                android:textStyle="normal" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="15dp"
                android:fontFamily="sans-serif"
                android:text="@string/gangguan12"
                android:textSize="17dp"
                android:textStyle="normal" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="15dp"
                android:fontFamily="sans-serif"
                android:text="@string/gangguan13"
                android:textSize="15dp"
                android:textStyle="italic" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="15dp"
                android:fontFamily="sans-serif"
                android:textSize="17dp"
                android:textStyle="normal" />
        </LinearLayout>

    </ScrollView>


</androidx.coordinatorlayout.widget.CoordinatorLayout>